--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -13,6 +14,7 @@
 		<!-- Header -->
 			<header id="header">
 				<h1>Anthony Smith</h1>
+				<p style="font-size: 18px;">Front-End Web Developer</p>
 				<nav>
 					<ul>
 						<li><a href="#intro">Intro</a></li>
@@ -28,10 +30,12 @@
 			<section id="intro" class="main style1 dark fullscreen">
 				<div class="content">
 					<header>
-						<h2>Hey.</h2>
+						<h2 class="animated bounce">Hey.</h2>
 
 					</header>
-					<p><strong>I'm Anthony,</strong> a Web Developer from Grand Rapids, Michigan.</p>
+					<p><strong>I'm Anthony,</strong> a Front-End Web Developer from Grand Rapids, Michigan.</p>
+					<a href="https://www.linkedin.com/in/anthony-smith-b1085389/" class="icon brands fa-linkedin-in" target="_blank"></a>
+					<a href="https://github.com/anthonys1760" class="icon brands fa-github" target="_blank"></a>
 					<footer>
 						<a href="#one" class="button style2 down">More</a>
 					</footer>
@@ -39,12 +43,12 @@
 			</section>
 
 		<!-- One -->
-			<section id="one" class="main style2 right dark fullscreen">
+			<section style="background-color: #f1f1f4;"  id="one" class="main style2 right dark fullscreen">
 				<div class="content box style2">
 					<header>
 						<h2>What I Do</h2>
 					</header>
-					<p>Hello! My name is Anthony & I'm a Web Developer from Grand Rapids Michigan, USA. I design, code & market beautiful, Responsive websites and Digital Marketing Campaigns that help you get customers and look great on all interfaces and devices.</p>
+					<p>I design, code & market beautiful, Responsive websites and Digital Marketing Campaigns that help you get customers and look great on all interfaces and devices.</p>
 				</div>
 				<a href="#two" class="button style2 down anchored">Next</a>
 			</section>
@@ -59,7 +63,9 @@
 						<li>HTML5</li>
 						<li>CSS3</li>
 						<li>JAVASCRIPT</li>
-						<li>PHP</li>
+						<li>JQUERY</li>
+						<li>Bootstrap 4</li>
+						<li>Foundation</li>
 					</ul>
 				</div>
 				<a href="#work" class="button style2 down anchored">Next</a>
@@ -70,13 +76,14 @@
 				<div class="content">
 					<header>
 						<h2>My Work</h2>
+						
 						<p>Click on a picture below to view a Project</p>
 					</header>
 
 					<!-- Gallery  -->
 						<div class="gallery">
 							<article class="from-left">
-								<a href="images/computer.jpg" class="image fit"><img src="images/computer.jpg" title="The Anonymous Red" alt="" /></a>
+								<a href="images/hello.png" class="image fit"><img src="images/hello.png" title="The Anonymous Red" alt="" /></a>
 							</article>
 							<article class="from-right">
 								<a href="images/computer1.jpg" class="image fit"><img src="images/computer1.jpg" title="Airchitecture II" alt="" /></a>
