--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 		<!-- One -->
 			<section style="background-color: #f1f1f4;"  id="one" class="main style2 right dark fullscreen">
-				<img id="illustration" src="images/skynet.jpg" alt="Coding Illustration">
+				
 				<div class="content box style2">
 					<header>
 						
@@ -61,14 +61,14 @@
 			<section id="two" class="main style2 left dark fullscreen">
 				<div class="content box style2">
 					<header>
-						<h2>Skills</h2>
+						<h2>SKILLS</h2>
 					<ul>
 						<li>HTML5</li>
 						<li>CSS3</li>
 						<li>JAVASCRIPT</li>
 						<li>JQUERY</li>
-						<li>Bootstrap 4</li>
-						<li>Foundation</li>
+						<li>BOOTSTRAP 4</li>
+						<li>FOUNDATION</li>
 					</ul>
 				</div>
 				<a href="#work" class="button style2 down anchored">Next</a>
@@ -96,7 +96,7 @@
 								<a href="images/long4s.png" class="image fit hvr-grow"><img src="images/1234.jpg" title="Full Stack Conference" alt="" /></a>
 							</article>
 							<article class="from-left">
-								<a href="images/realestate1.jpg" class="image fit hvr-grow"><img src="images/realestate.jpg" title="Full Stack Conference" alt="" /></a>
+								<a href="images/long34.png" class="image fit hvr-grow"><img src="images/mock.jpg" title="Travel Agency" alt="" /></a>
 							</article>
 						</div>
 
@@ -104,7 +104,7 @@
 			</section>
 
 		<!-- Contact -->
-			<section style="padding-bottom: 150px;" id="contact" class="main style3 secondary">
+			<section style="padding-bottom: 100px;" id="contact" class="main style3 secondary">
 				<div class="content">
 					<header>
 						<h2>Say Hello.</h2>
