--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 								<a href="images/long2f.png" class="image fit hvr-grow"><img src="images/231.jpg" title="Full Stack Conference" alt="" /></a>
 							</article>
 							<article class="from-left">
-								<a href="images/places1.jpg" class="image fit hvr-grow"><img src="images/places1.jpg" title="Full Stack Conference" alt="" /></a>
+								<a href="images/bigimage.jpg" class="image fit hvr-grow"><img src="images/spacex.jpg" title="SpaceX" alt="" /></a>
 							</article>
 							<article class="from-left">
 								<a href="images/long34.png" class="image fit hvr-grow"><img src="images/mock.jpg" title="Travel Agency" alt="" /></a>
