--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
 			<section id="intro" class="main style1 dark fullscreen">
 				<div class="content">
 					<header>
-						<h2 class="animated bounce">Hey.</h2>
+						<h2 class="animated bounce hover">Hey.</h2>
 
 					</header>
 					<p>I'm Anthony, a Front-End Web Developer from Grand Rapids, Michigan.</p>
-					<a class="hvr-grow" href="https://sourcerer.io/anthonys1760" target="_blank"><img src="https://sourcerer.io/icons/logo-sharing.svg"height="48px" alt="Sourcerer"></a>
+					<a href="https://github.com/anthonys1760" class="hvr-grow icon brands fa-github fa-2x" target="_blank"><span class="label">Github</span></a>
 					
 					<footer>
 						<a href="#one" class="button style2 down">More</a>
