--- a/index.html
+++ b/index.html
@@ -96,13 +96,13 @@
 					<!-- Gallery  -->
 						<div class="gallery">
 							<article class="from-left">
-								<a href="http://www.anthonysdigital.net/digitalorbit/" target="_blank" class="image fit hvr-grow"><img src="images/digital.jpg" title="Digital Orbit" alt="" /></a>
+								<a href="http://www.anthonysdigital.net/digitalorbit/"class="image fit hvr-grow"><img src="images/digital.jpg" title="Digital Orbit" alt="" /></a>
 							</article>
 							<article class="from-left">
-								<a href="http://www.anthonysdigital.net/fullstackcomf/" target="_blank"  class="image fit hvr-grow"><img src="images/231.jpg" title="Full Stack Conference" alt="" /></a>
+								<a href="http://www.anthonysdigital.net/fullstackcomf/" class="image fit hvr-grow"><img src="images/231.jpg" title="Full Stack Conference" alt="" /></a>
 							</article>
 							<article class="from-left">
-								<a href="http://www.anthonysdigital.net/spacex/" target="_blank" class="image fit hvr-grow"><img src="images/spacex.jpg" title="SpaceX" alt="" /></a>
+								<a href="http://www.anthonysdigital.net/spacex/" class="image fit hvr-grow"><img src="images/spacex.jpg" title="SpaceX" alt="" /></a>
 							</article>
 							<article class="from-left">
 								<a href="images/long34.png" class="image fit hvr-grow"><img src="images/mock.jpg" title="Travel Agency" alt="" /></a>
