--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 					<!-- Gallery  -->
 						<div class="gallery">
 							<article class="from-left">
-								<a href="http://www.anthonysdigital.net/digitalorbit/"class="image fit hvr-grow"><img src="images/digital.jpg" title="Digital Orbit" alt="" /></a>
+								<a href="http://www.anthonysdigital.net/digitalorbit/"class="image fit hvr-grow">Digital Orbit<img src="images/digital.jpg" title="Digital Orbit" alt="" /></a>
 							</article>
 							<article class="from-left">
 								<a href="http://www.anthonysdigital.net/fullstackcomf/" class="image fit hvr-grow"><img src="images/231.jpg" title="Full Stack Conference" alt="" /></a>
