--- a/index.html
+++ b/index.html
@@ -96,10 +96,7 @@
 					<!-- Gallery  -->
 						<div class="gallery">
 							<article class="from-left">
-								<a href="www.facebook.com" class="image fit hvr-grow" target="_blank"><img src="images/digital.jpg" title="Digital Orbit" alt="" /></a>
-								<div style="padding: 20px;">
-								<a href="www.facebook.com" target="_blank"><input class="button" type="submit" value="View Website" /></a>
-								</div>
+								<a href="images/digital.jpg" class="image fit hvr-grow"><img src="images/digital.jpg" title="Digital Orbit" alt="" /></a>
 							</article>
 							<article class="from-left">
 								<a href="images/231.jpg" class="image fit hvr-grow"><img src="images/231.jpg" title="Full Stack Conference" alt="" /></a>
