--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 								
 							</ul>
 							<ul class="copyright">
-								<li>&copy; 2019. All rights reserved.</li><li>Website Developer by Anthony Smith</li><li><a href="https://sourcerer.io/anthonys1760" target="_blank"><img class="padding hvr-grow"src="https://sourcerer.io/icons/logo-sharing.svg"height="22px" alt="Sourcerer"></a></li>
+								<li>&copy; 2019. All rights reserved.</li><li>Website developed by Anthony Smith</li><li><a href="https://sourcerer.io/anthonys1760" target="_blank"><img class="padding hvr-grow"src="https://sourcerer.io/icons/logo-sharing.svg"height="22px" alt="Sourcerer"></a></li>
 							</ul>
 						</div>
 					</section>
