--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 						<div class="inner">
 							<h2 id="contact">Get in touch</h2>
 							<p>Contact me today by filling out the form below to discuss your project scope and details.</p>
-							<form method="post" action="#">
+							<form method="post" action="mailto:anthony.smith1760@gmail.com">
 								<div class="fields">
 									<div class="field">
 										<label for="name">Name</label>
