--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 							<br>
 							<br>
 							<ul class="actions">
-							<li><a style="list-style-type: none;" href="#" class="button">Hire Me</a></li>
+							<li><a style="list-style-type: none;" href="#contact" class="button">Hire Me</a></li>
 							</ul>
 							
 						</div>
