--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 							<ul class="contact">
 								<li class="icon brands fa-dev">
 								
-									Anthony Smith | Front-End Web Developer<br />
+									Anthony Smith | Web Developer<br />
 									Grand Rapids, Michigan<br />
 								</li>
 								<li class="icon solid fa-code"></i>
