--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
 							<i class="icon brands fab fa-css3-alt hvr-grow"></i>
 							<i class="icon brands fab fa-js hvr-grow"></i>
 							<i class="icon brands fab fa-php hvr-grow"></i>
+							<i class="icon brands fab fa-gulp hvr-grow"></i>
+							<i class="icon brands fab fa-mailchimp hvr-grow"></i>
 							<i class="icon brands fab fa-bootstrap hvr-grow"></i>
 							<i class="icon brands fab fa-wordpress hvr-grow"></i>
 							<br>
@@ -134,7 +136,9 @@
 											<h3 class="major">HTML Email</h3>
 											<p>This HTML Email was designed and hand coded for a company's email marketing campaign.</p>
 											<a href="https://www.anthonysdigital.net/htmlemail1/" class="special hvr-grow">View Live HTML Email</a>
-											<a href="https://github.com/anthonys1760/htmlemail1/blob/master/index.html" target="_blank" class="special hvr-grow">View Source Code</a>
+											<a href="https://github.com/anthonys1760/htmlemail1/blob/master/index.html" target="_blank" class="special hvr-grow fa-github">View Source Code</a>
+											<ul>
+											
 										</article>
 									</section>
 									<ul class="actions">
