--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 						<!-- Two -->
 							<section id="two" class="wrapper alt spotlight style2">
 								<div class="inner">
-									<a href="https://www.anthonysdigital.net/htmlemail1/" target="_blank"class="image hrv-grow"><img src="images/email1.jpg" alt="" /></a>
+									<a href="https://www.anthonysdigital.net/htmlemail1/" target="_blank"class="image hvr-grow"><img src="images/email1.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">HTML Email Development</h2>
 										<p>I also hand code custom email's using HTML and CSS to perfectly develop and align every element and detail to achieve a pixel perfect custom coded HTML Email which is guaranteed to scale responsively on a number of various email clients.</p>
