--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 											<a href="https://github.com/anthonys1760/htmlemail1/blob/master/index.html" target="_blank" class="special hvr-grow fa-github">View Source Code</a>
 										</article>
 										<article>
-												<a href="https://www.skynetdigital.net" target="_blank" class="image hvr-grow"><img src="images/skynet.jpg" alt="" /></a>
+												<a href="https://www.skynetdigital.net" target="_blank" class="image hvr-grow"><img src="images/skynet1.jpg" alt="" /></a>
 												<h3 class="major">Skynet Digital</h3>
 												<p>A Digital Agency website built with a focus on local website development within the community.</p>
 												<a href="https://www.skynetdigital.net" target="_blank" class="special hvr-grow">View Live Website</a>
@@ -244,8 +244,8 @@
 											</article>
 											<article>
 													<a href="https://www.juicyysbeauties.com/" target="_blank" class="image hvr-grow"><img src="images/beauty.jpg" alt="" /></a>
-													<h3 class="major">Client Website: Juicyy's Beauties</h3>
-													<p>A Digital Agency website built with a focus on local website development within the community.</p>
+													<h3 class="major">Client E-commerce Website: Juicyy's Beauties</h3>
+													<p>Website developed for a small business owner who specializes in the sale of Hair, Skin and Nail's product. This business always does hair and nail appointments which required booking integration into the website.</p>
 													<a href="https://www.juicyysbeauties.com/" target="_blank" class="special hvr-grow">View Live Website</a>
 													<a href="https://github.com/anthonys1760/juicyysbeauties/tree/master" target="_blank" class="special hvr-grow">View Source Code</a>
 												</article>
