--- a/index.html
+++ b/index.html
@@ -250,9 +250,9 @@
 													<a href="https://github.com/anthonys1760/juicyysbeauties/tree/master" target="_blank" class="special hvr-grow">View Source Code</a>
 												</article>
 									</section>
-									<ul class="actions">
+									<!-- <ul class="actions">
 										<li><a href="#" class="button">Browse All</a></li>
-									</ul>
+									</ul> -->
 								</div>
 							</section>
 
