--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 							<div class="col-6 col-12-medium">
 									<ul class="actions stacked">
 										
-										<li><a href="#major" class="button small">Contact Me</a></li>
+										<li><a href="#contact" class="button small">Contact Me</a></li>
 										
 									</ul>
 							</div>
