--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 								<li><a href="index.html">Home</a></li>
 								<li><a href="#major">About</a></li>
 								<li><a href="#major">Portfolio</a></li>
+								<li><a href="#contact">Contact</a></li>
+
 							
 							</ul>
 							<a href="#" class="close">Close</a>
