--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 							<div class="center">
 							<h2>Hey, I'm Anthony Smith.</h2>
 							<p>A Front-End Web Developer from Grand Rapids, Michigan.</p>
-							<a href="https://github.com/anthonys1760" target="_blank" class="icon brands fa-github hvr-grow" target="_blank"><span class="label">Github</span></a>
-							<a href="https://www.linkedin.com/in/anthony-smith-b1085389/" target="_blank" class="icon brands fa-linkedin hvr-grow" target="_blank"><span class="label">Linked In</span></a>
+							<a href="https://github.com/anthonys1760" target="_blank" class="icon brands fa-github hvr-grow" style="color: #4C5C96"><span class="label">Github</span></a>
+							<a href="https://www.linkedin.com/in/anthony-smith-b1085389/" target="_blank" class="icon brands fa-linkedin hvr-grow" style="color: #4C5C96" target="_blank"><span class="label">Linked In</span></a>
 							<br>
 							<br>
 							<!-- <ul class="actions">
