--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 							<div class="center">
 							<h2>Hey, I'm Anthony Smith.</h2>
 							<p>A Front-End Web Developer from Grand Rapids, Michigan.</p>
-							<a href="https://github.com/anthonys1760" target="_blank" class="icon brands fa-github hvr-grow" style="color: #4C5C96"><span class="label">Github</span></a>
-							<a href="https://www.linkedin.com/in/anthony-smith-b1085389/" target="_blank" class="icon brands fa-linkedin hvr-grow" style="color: #4C5C96" target="_blank"><span class="label">Linked In</span></a>
+							<a href="https://github.com/anthonys1760" target="_blank" class="icon brands fa-github hvr-grow" style="font-size: 30px"></a><span class="label"></span></a>
+							<a href="https://www.linkedin.com/in/anthony-smith-b1085389/" target="_blank" class="icon brands fa-linkedin hvr-grow" style="font-size: 30px" target="_blank"><span class="label">Linked In</span></a>
 							<br>
 							<br>
 							<!-- <ul class="actions">
@@ -57,7 +57,7 @@
 							<div class="col-6 col-12-medium">
 									<ul class="actions stacked">
 										
-										<li><a href="#contact" class="button small">Contact Me</a></li>
+										<li><a href="#contact" class="button medium">Contact Me</a></li>
 										
 									</ul>
 							</div>
