--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 							<section id="two" class="wrapper alt spotlight style2">
 								<div class="inner">
 									<section>
-										<h3 class="major">Front-End Web Development Languages and Skills</h3>
+										<h2 class="major" style="text-align: center";>Front-End Web Development Languages and Skills</h2>
 										
 										<div class="table-wrapper">
 											
@@ -181,6 +181,7 @@
 													<blockquote>"Anthony was very professional and available for feedback. He was quite persistent in helping me meet critical deadlines. His knowledge of Web Design proved quite necessary as we negotiated some tough issues. I enthusiastically and whole hardly recommend Anthony." - Leroy Evans (Power Generation & Distribution Services)</blockquote>
 													<blockquote>"Very responsive did a great job. Thanks!" - Jose Merc (All Building Solutions)</blockquote>
 													<blockquote>"I would like to promote Mr. Anthony Smith's Website design Business to other potential customers. His pricing is far cheaper than the bigger companies and he is a very dedicated person to establish your business website and design." - Roy Hanning (Hanning's Sports Apparel)</blockquote>
+													<blockquote>"If you'd like a website made go through anthony. He brings your vision to life! Anything you want on your site he will get it done. He's had experience and has helped people's business grow. Highly recommend." - Shontice Reid, CEO, XO Candles"</blockquote>
 										</div>
 									</section>
 								</div>
@@ -191,8 +192,8 @@
 						<!-- Four -->
 							<section id="four" class="wrapper alt style1">
 								<div class="inner">
-									<h2 id="major">Portfolio</h2>
-									<p>Extensive experience in coding Responsive Websites, Applications and HTML Email's which look great on all devices and are optimized to load quickly and efficiently.
+									<h2 id="major" style="text-align: center">Portfolio</h2>
+									<p style="text-align: center">Extensive experience in coding Responsive Websites, Applications and HTML Email's which look great on all devices and are optimized to load quickly and efficiently.
 									</p>
 									<section class="features">
 										<article>
@@ -269,7 +270,7 @@
 				<!-- Footer -->
 					<section id="footer">
 						<div class="inner">
-							<h2 id="contact">Get in touch</h2>
+							<h2 id="contact" style="text-align: center">Get in touch</h2>
 							<p>Contact me today by filling out the form below to discuss your project scope and details.</p>
 							<form method="post" action="mailto:anthony.smith1760@gmail.com">
 								<div class="fields">
