--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 													<blockquote>"Anthony was very professional and available for feedback. He was quite persistent in helping me meet critical deadlines. His knowledge of Web Design proved quite necessary as we negotiated some tough issues. I enthusiastically and whole hardly recommend Anthony." - Leroy Evans (Power Generation & Distribution Services)</blockquote>
 													<blockquote>"Very responsive did a great job. Thanks!" - Jose Merc (All Building Solutions)</blockquote>
 													<blockquote>"I would like to promote Mr. Anthony Smith's Website design Business to other potential customers. His pricing is far cheaper than the bigger companies and he is a very dedicated person to establish your business website and design." - Roy Hanning (Hanning's Sports Apparel)</blockquote>
-													<blockquote>"If you'd like a website made go through anthony. He brings your vision to life! Anything you want on your site he will get it done. He's had experience and has helped people's business grow. Highly recommend." - Shontice Reid, CEO, XO Candles"</blockquote>
+													<blockquote>"If you'd like a website made go through anthony. He brings your vision to life! Anything you want on your site he will get it done. He's had experience and has helped people's business grow. Highly recommend." - Shontice Reid (XO Candles)</blockquote>
 										</div>
 									</section>
 								</div>
