--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 												
 											</table>
 											
-											<h2 style="text-align: center;">Testimonials</h2>
+											<h2 style="text-align: center;">Client Testimonials</h2>
 													<blockquote>"Anthony was very professional and available for feedback. He was quite persistent in helping me meet critical deadlines. His knowledge of Web Design proved quite necessary as we negotiated some tough issues. I enthusiastically and whole hardly recommend Anthony." - Leroy Evans (Power Generation & Distribution Services)</blockquote>
 													<blockquote>"Very responsive did a great job. Thanks!" - Jose Merc (All Building Solutions)</blockquote>
 													<blockquote>"I would like to promote Mr. Anthony Smith's Website design Business to other potential customers. His pricing is far cheaper than the bigger companies and he is a very dedicated person to establish your business website and design." - Roy Hanning (Hanning's Sports Apparel)</blockquote>
