--- a/contacts_image.html
+++ b/contacts_image.html
@@ -119,7 +119,7 @@
 			<div class="section started section-title" id="section-started">
 
 				<!-- background -->
-				<div class="video-bg jarallax" style="background-image: url(night.jpg);">
+				<div class="video-bg jarallax" style="background-image: url(images/night.jpg);">
 					<div class="video-bg-mask"></div>
 					<div class="video-bg-texture" id="grained_container"></div>
 				</div>
