--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 									
 								</li>
 								<li class="menu-item menu-item-has-children">
-									<a href="contacts.html">Contact</a>
+									<a href="contacts_image.html">Contact</a>
 								
 								</li>
 							</ul>
