--- a/contacts_image.html
+++ b/contacts_image.html
@@ -132,7 +132,7 @@
 							<div class="h-subtitles">
 								<div class="h-subtitle typing-bread">
 									<p class="breadcrumbs">
-										<a href="index.html">Home</a> / Contact
+										<!-- <a href="index.html">Contact</a> -->
 									</p>
 								</div>
 								<span class="typed-bread"></span>
@@ -202,7 +202,7 @@
 
 					<!-- title -->
 					<div class="title">
-						<div class="title_inner">Contacts Form</div>
+						<div class="title_inner">Contact Form</div>
 					</div>
 
 					<!-- form -->
@@ -238,8 +238,8 @@
 		<!-- Footer -->
 		<footer class="footer">
 			<div class="copy">
-				<p>E: anthony.smith1760@gmail.com@gmail.com</p>
-				<p>T: 616-272-2169</p>
+				<p>Website Developed by Anthony Smith</p>
+				
 			</div>
 			<div class="soc-box">
 				<div class="follow-label">Follow Me</div>
