--- a/index_image.html
+++ b/index_image.html
@@ -135,7 +135,7 @@
 					<div class="vertical-center">
 						<div class="started-content">
 							<h1 class="h-title">
-								Hello, I’m <strong>Anthony Smith</strong>, Front-end Developer <br />
+								Hello, I’m <strong>Anthony Smith</strong>, Front-end Web Developer <br />
 								and Designer based in Grand Rapids Michigan.
 							</h1>
 							<div class="h-subtitle typing-subtitle">
