--- a/works_creative.html
+++ b/works_creative.html
@@ -146,11 +146,12 @@
 			<div class="section works" id="section-portfolio">
 				<div class="content">
 				
+					
 					<!-- portfolio filter -->
 					<div class="filter-menu content-box">
 						<div class="filters">
 							<div class="btn-group">
-								<label data-text="All" class="glitch-effect"><input type="radio" name="fl_radio" value=".box-item" />Choose a Portfolio item below to view</label>
+								<label data-text="All" class="glitch-effect"><input type="radio" name="fl_radio" value=".box-item" />Responsive Websites</label>
 							</div>
 							<!--
 							<div class="btn-group">
