--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 					<div class="skills circles content-box">
 						<ul>
 							<li> 
-								<div class="name">HTML/CSS/</div>
+								<div class="name">HTML/CSS</div>
 								<div class="progress p100"> <!-- p90 = 90% circle fill color -->
 									<div class="percentage">
 										<span class="percent">100%</span>
