--- a/works_creative.html
+++ b/works_creative.html
@@ -454,7 +454,7 @@
 				<p>E: anthony.smith1760@gmail.com</p>
 				<p>T: +1 616-272-2169 </p> 
 			</div> -->
-			<div class="soc-box">
+			<!-- <div class="soc-box">
 				<div class="follow-label">Follow Me</div>
 				<div class="soc">
 					<a target="_blank" href="https://www.pinterest.com/">
@@ -470,7 +470,7 @@
 			</div>
 			<div class="clear"></div>
 		</footer>
-
+	-->
 		<!-- Lines -->
 		<div class="lines">
 			<div class="line-col"></div>
