--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
 							<div class="service-item content-box">
 								<div class="icon"><span class="fas fa-headphones"></span></div>
 								<div class="name">Music</div>
-								<div class="text">An artist who enjoys to read and create music of various genre's</div>
+								<div class="text">An artist who enjoys to read and write music of various genre's</div>
 							</div>
 						</div>
 
