--- a/contacts_image.html
+++ b/contacts_image.html
@@ -90,7 +90,7 @@
 						<div class="menu-topmenu-container">
 							<ul class="menu">
 								<li class="menu-item menu-item-has-children">
-									<a href="index_image.html">Home</a>
+									<a href="index.html">Home</a>
 									
 								</li>
 								<li class="menu-item menu-item-has-children">
