--- a/index.html
+++ b/index.html
@@ -127,9 +127,11 @@
 								Based in Grand Rapids, Michigan.
 							</h1>
 							<div class="h-subtitle typing-subtitle">
-								<p>I code cool <strong>Websites</strong></p>
-								<p>I develop <strong>Web Applications</strong></p>
-								<p>I love <strong>Javascript</strong></p>
+								<p>I code cool <strong>websites</strong></p>
+								<p>I develop <strong>web apps</strong></p>
+								<p>I love <strong>javascript</strong></p>
+								<p>I solve <strong>problems</strong></p>
+								<p>I learn <strong>everyday</strong></p>
 							</div>
 							<span class="typed-subtitle"></span>
 						</div>
