--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 					<div class="vertical-center">
 						<div class="started-content">
 							<h1 class="h-title">
-								Hey, I’m <strong>Anthony Smith</strong>, Front-End Web Developer<br />
+								Hey, I’m <strong>Anthony Smith</strong>, a Front-End Web Developer<br />
 								Based in Grand Rapids, Michigan.
 							</h1>
 							<div class="h-subtitle typing-subtitle">
@@ -131,7 +131,7 @@
 								<p>I develop <strong>web apps</strong></p>
 								<p>I love <strong>javascript</strong></p>
 								<p>I solve <strong>problems</strong></p>
-								<p>I learn <strong>everyday</strong></p>
+								<p>I learn new code<strong>everyday</strong></p>
 							</div>
 							<span class="typed-subtitle"></span>
 						</div>
@@ -160,9 +160,8 @@
 						<p>I'm a Front-End Web Developer that has experience working on everything from small business websites to mid-high volume media websites. I have been working professionally as a front end developer for nearly 4 years. I'm comfortable doing everything from basic HTML tasks all the way to custom shopping carts, and custom CMS solutions.</p>
 						<div class="info-list">
 							<ul></ul>
-								<li><strong>Residence:</strong> USA</li>
+								<li><strong>Residence:</strong> Grand Rapids, USA</li>
 								<li><strong>Freelance:</strong> Available</li>
-								<li><strong>Address:</strong> Grand Rapids</li>
 								<li><strong>Phone:</strong> 616-272-2169</li>
 								<li><strong>E-mail:</strong> anthony.smith1760@gmail.com</li>
 							</ul>
@@ -233,14 +232,6 @@
 								<div class="progress ">
 									<div class="percentage" style="width: 90%;">
 										<span class="percent">90%</span>
-									</div>
-								</div>
-							</li>
-							<li> 
-								<div class="name">Illustrations</div>
-								<div class="progress ">
-									<div class="percentage" style="width: 70%;">
-										<span class="percent">70%</span>
 									</div>
 								</div>
 							</li>
@@ -393,7 +384,7 @@
 							<div class="service-item content-box">
 								<div class="icon"><span class="fas fa-headphones"></span></div>
 								<div class="name">Music</div>
-								<div class="text">An artist who enjoys to read and write music of various genre's</div>
+								<div class="text">An artist who enjoys to read and write music of various genre's.</div>
 							</div>
 						</div>
 
@@ -489,14 +480,14 @@
 							<div class="service-item content-box">
 								<div class="icon"><span class="fas fa-envelope"></span></div>
 								<div class="name">Email</div>
-								<div class="text"><a href="mailto:steve-pearson@gmail.com">anthony.smith1760@gmail.com</a></div>
+								<div class="text"><a href="mailto:anthony.smith1760@gmail.com">anthony.smith1760@gmail.com</a></div>
 							</div>
 						</div>
 
 						<div class="service-col">
 							<div class="service-item content-box">
 								<div class="icon"><span class="fas fa-map-marker-alt"></span></div>
-								<div class="name">Address</div>
+								<div class="name">Residence</div>
 								<div class="text">Grand Rapids, Michigan</div>
 							</div>
 						</div>
