--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 								<p>I develop <strong>web apps</strong></p>
 								<p>I love <strong>javascript</strong></p>
 								<p>I solve <strong>problems</strong></p>
-								<p>I learn new code<strong>everyday</strong></p>
+								<p>I learn code <strong>everyday</strong></p>
 							</div>
 							<span class="typed-subtitle"></span>
 						</div>
