--- a/works_creative.html
+++ b/works_creative.html
@@ -280,6 +280,56 @@
 
 						<div class="box-item f-gallery">
 							<div class="image">
+								<a href="https://www.grillinwingsandmore.com/" target="_blank" class="has-popup-gallery hover-animated">
+									<img src="images/grill.jpg" class="wp-post-image" alt="" />
+									<span class="info circle">
+										<span class="centrize full-width">
+											<span class="vertical-center">
+												<span class="icon fas fa-images"></span>
+												<span class="desc">
+													<span class="category">Gallery</span>
+													<span class="name">Grillin Wings & More</span>
+												</span>
+											</span>
+										</span>
+									</span>
+								</a>
+								<div id="gallery-1" class="mfp-hide">
+									<a href="images/work1.jpg"></a>
+									<a href="images/work2.jpg"></a>
+									<a href="images/work3.jpg"></a>
+									<a href="images/work4.jpg"></a>
+								</div>	
+							</div>
+						</div>
+
+						<div class="box-item f-gallery">
+							<div class="image">
+								<a href="https://www.xocandles.net/" target="_blank" class="has-popup-gallery hover-animated">
+									<img src="images/xocandles.jpg" class="wp-post-image" alt="" />
+									<span class="info circle">
+										<span class="centrize full-width">
+											<span class="vertical-center">
+												<span class="icon fas fa-images"></span>
+												<span class="desc">
+													<span class="category">Gallery</span>
+													<span class="name">XO Candles</span>
+												</span>
+											</span>
+										</span>
+									</span>
+								</a>
+								<div id="gallery-1" class="mfp-hide">
+									<a href="images/work1.jpg"></a>
+									<a href="images/work2.jpg"></a>
+									<a href="images/work3.jpg"></a>
+									<a href="images/work4.jpg"></a>
+								</div>	
+							</div>
+						</div>
+
+						<div class="box-item f-gallery">
+							<div class="image">
 								<a href="http://www.anthonysdigital.net/museumofcandy/" target="_blank" class="has-popup-gallery hover-animated">
 									<img src="images/museumofcandy.jpg" class="wp-post-image" alt="" />
 									<span class="info circle">
