--- a/works_creative.html
+++ b/works_creative.html
@@ -381,15 +381,40 @@
 
 						<div class="box-item f-gallery">
 							<div class="image">
-								<a href=" https://repl.it/@AnthonySmith6/Rock-Paper-Scissors-Game-Human-Vs-Computer" target="_blank" class="has-popup-gallery hover-animated">
-									<img src="images/javascript1.jpg" class="wp-post-image" alt="" />
+								<a href="http://www.anthonysdigital.net/feedsterjQueryProject/" target="_blank" class="has-popup-gallery hover-animated">
+									<img src="images/feedstersite.jpg" class="wp-post-image" alt="" />
 									<span class="info circle">
 										<span class="centrize full-width">
 											<span class="vertical-center">
 												<span class="icon fas fa-images"></span>
 												<span class="desc">
 													<span class="category">Gallery</span>
-													<span class="name">Rock Paper Scissors Game (Javascript)</span>
+													<span class="name">Feedster Website (jQuery) </span>
+												</span>
+											</span>
+										</span>
+									</span>
+								</a>
+								<div id="gallery-1" class="mfp-hide">
+									<a href="images/work1.jpg"></a>
+									<a href="images/work2.jpg"></a>
+									<a href="images/work3.jpg"></a>
+									<a href="images/work4.jpg"></a>
+								</div>	
+							</div>
+						</div>
+
+						<div class="box-item f-gallery">
+							<div class="image">
+								<a href="http://www.anthonysdigital.net/jQuery-Webfonts-App/" target="_blank" class="has-popup-gallery hover-animated">
+									<img src="images/jqueryapp.jpg" class="wp-post-image" alt="" />
+									<span class="info circle">
+										<span class="centrize full-width">
+											<span class="vertical-center">
+												<span class="icon fas fa-images"></span>
+												<span class="desc">
+													<span class="category">Gallery</span>
+													<span class="name">Web Fonts App (jQuery)</span>
 												</span>
 											</span>
 										</span>
@@ -428,6 +453,33 @@
 								</div>	
 							</div>
 						</div>
+
+
+						<div class="box-item f-gallery">
+							<div class="image">
+								<a href="https://repl.it/@AnthonySmith6/Sleep-Debt-Calculator" target="_blank" class="has-popup-gallery hover-animated">
+									<img src="images/javascript2.jpg" class="wp-post-image" alt="" />
+									<span class="info circle">
+										<span class="centrize full-width">
+											<span class="vertical-center">
+												<span class="icon fas fa-images"></span>
+												<span class="desc">
+													<span class="category">Gallery</span>
+													<span class="name">Sleep Debt Calculator (Javascript)</span>
+												</span>
+											</span>
+										</span>
+									</span>
+								</a>
+								<div id="gallery-1" class="mfp-hide">
+									<a href="images/work1.jpg"></a>
+									<a href="images/work2.jpg"></a>
+									<a href="images/work3.jpg"></a>
+									<a href="images/work4.jpg"></a>
+								</div>	
+							</div>
+						</div>
+
 
 						<!--<div class="box-item f-links"> --><!-- add class "animate-to-page" if need animated transition to page and delete target="_blank" -->
 							<!-- <div class="image">
