--- a/works_creative.html
+++ b/works_creative.html
@@ -190,7 +190,7 @@
 											<span class="vertical-center">
 												<span class="icon fas fa-images"></span>
 												<span class="desc">
-													<span class="category">Gallery</span>
+													<span class="category">Live Client Website</span>
 													<span class="name">Skynet Digital Agency</span>
 												</span>
 											</span>
@@ -215,7 +215,7 @@
 											<span class="vertical-center">
 												<span class="icon fas fa-images"></span>
 												<span class="desc">
-													<span class="category">Gallery</span>
+													<span class="category">Live Client Website</span>
 													<span class="name">All Building Solutions</span>
 												</span>
 											</span>
@@ -237,7 +237,7 @@
 											<span class="vertical-center">
 												<span class="icon fas fa-images"></span>
 												<span class="desc">
-													<span class="category">Gallery</span>
+													<span class="category">Live Client Website</span>
 													<span class="name">Breezy Day Productions</span>
 												</span>
 											</span>
@@ -262,7 +262,7 @@
 											<span class="vertical-center">
 												<span class="icon fas fa-images"></span>
 												<span class="desc">
-													<span class="category">Gallery</span>
+													<span class="category">Live Client Website</span>
 													<span class="name">Juicyy's Beauties</span>
 												</span>
 											</span>
@@ -287,7 +287,7 @@
 											<span class="vertical-center">
 												<span class="icon fas fa-images"></span>
 												<span class="desc">
-													<span class="category">Gallery</span>
+													<span class="category">Live Client Website</span>
 													<span class="name">Grillin Wings & More</span>
 												</span>
 											</span>
@@ -312,7 +312,7 @@
 											<span class="vertical-center">
 												<span class="icon fas fa-images"></span>
 												<span class="desc">
-													<span class="category">Gallery</span>
+													<span class="category">Live Client Website</span>
 													<span class="name">XO Candles</span>
 												</span>
 											</span>
@@ -337,7 +337,7 @@
 											<span class="vertical-center">
 												<span class="icon fas fa-images"></span>
 												<span class="desc">
-													<span class="category">Gallery</span>
+													<span class="category">Bootstrap 4 Project</span>
 													<span class="name">Museum of Candy</span>
 												</span>
 											</span>
@@ -362,7 +362,7 @@
 											<span class="vertical-center">
 												<span class="icon fas fa-images"></span>
 												<span class="desc">
-													<span class="category">Gallery</span>
+													<span class="category">Bootstrap 4 Project</span>
 													<span class="name">Beautiful Cats</span>
 												</span>
 											</span>
@@ -388,8 +388,8 @@
 											<span class="vertical-center">
 												<span class="icon fas fa-images"></span>
 												<span class="desc">
-													<span class="category">Gallery</span>
-													<span class="name">Feedster Website (jQuery) </span>
+													<span class="category">jQuery Project</span>
+													<span class="name">Feedster Website</span>
 												</span>
 											</span>
 										</span>
@@ -413,8 +413,8 @@
 											<span class="vertical-center">
 												<span class="icon fas fa-images"></span>
 												<span class="desc">
-													<span class="category">Gallery</span>
-													<span class="name">Web Fonts App (jQuery)</span>
+													<span class="category">jQuery Project</span>
+													<span class="name">Web Fonts App</span>
 												</span>
 											</span>
 										</span>
@@ -438,8 +438,8 @@
 											<span class="vertical-center">
 												<span class="icon fas fa-images"></span>
 												<span class="desc">
-													<span class="category">Gallery</span>
-													<span class="name">Sleep Debt Calculator (Javascript)</span>
+													<span class="category">Javascript Project</span>
+													<span class="name">Sleep Debt Calculator</span>
 												</span>
 											</span>
 										</span>
@@ -464,8 +464,8 @@
 											<span class="vertical-center">
 												<span class="icon fas fa-images"></span>
 												<span class="desc">
-													<span class="category">Gallery</span>
-													<span class="name">Sleep Debt Calculator (Javascript)</span>
+													<span class="category">Javascript Project</span>
+													<span class="name">Sleep Debt Calculator</span>
 												</span>
 											</span>
 										</span>
