--- a/works_creative.html
+++ b/works_creative.html
@@ -337,7 +337,7 @@
 											<span class="vertical-center">
 												<span class="icon fas fa-images"></span>
 												<span class="desc">
-													<span class="category">Bootstrap 4 Project</span>
+													<span class="category">HTML/CSS/Bootstrap 4 Project</span>
 													<span class="name">Museum of Candy</span>
 												</span>
 											</span>
@@ -362,7 +362,7 @@
 											<span class="vertical-center">
 												<span class="icon fas fa-images"></span>
 												<span class="desc">
-													<span class="category">Bootstrap 4 Project</span>
+													<span class="category">HTML/CSS/Bootstrap 4 Project</span>
 													<span class="name">Beautiful Cats</span>
 												</span>
 											</span>
@@ -388,7 +388,7 @@
 											<span class="vertical-center">
 												<span class="icon fas fa-images"></span>
 												<span class="desc">
-													<span class="category">jQuery Project</span>
+													<span class="category">HTML/CSS/Javascript/jQuery Project</span>
 													<span class="name">Feedster Website</span>
 												</span>
 											</span>
@@ -413,7 +413,7 @@
 											<span class="vertical-center">
 												<span class="icon fas fa-images"></span>
 												<span class="desc">
-													<span class="category">jQuery Project</span>
+													<span class="category">HTML/CSS/Javascript/jQuery Project</span>
 													<span class="name">Web Fonts App</span>
 												</span>
 											</span>
