--- a/index.html
+++ b/index.html
@@ -566,8 +566,9 @@
 			<div class="soc-box">
 				<div class="follow-label">Follow Me</div>
 				<div class="soc">
-					<a target="_blank" href="https://www.pinterest.com/">
-						<span class="icon fab fa-pinterest"></span>
+					<a target="_blank" href="https://github.com/anthonys1760?tab=repositories">
+						<span class="icon fab fa-github"></span>
+						
 					</a>
 					<a target="_blank" href="https://www.instagram.com/">
 						<span class="icon fab fa-instagram"></span>
