--- a/works_creative.html
+++ b/works_creative.html
@@ -431,6 +431,31 @@
 
 						<div class="box-item f-gallery">
 							<div class="image">
+								<a href="http://www.anthonysdigital.net/jquerygameboard/" target="_blank" class="has-popup-gallery hover-animated">
+									<img src="images/gameboard.jpg" class="wp-post-image" alt="" />
+									<span class="info circle">
+										<span class="centrize full-width">
+											<span class="vertical-center">
+												<span class="icon fas fa-images"></span>
+												<span class="desc">
+													<span class="category">HTML/CSS/Javascript/jQuery Project</span>
+													<span class="name">Gameboard</span>
+												</span>
+											</span>
+										</span>
+									</span>
+								</a>
+								<div id="gallery-1" class="mfp-hide">
+									<a href="images/work1.jpg"></a>
+									<a href="images/work2.jpg"></a>
+									<a href="images/work3.jpg"></a>
+									<a href="images/work4.jpg"></a>
+								</div>	
+							</div>
+						</div>
+
+						<div class="box-item f-gallery">
+							<div class="image">
 								<a href="https://repl.it/@AnthonySmith6/Sleep-Debt-Calculator" target="_blank" class="has-popup-gallery hover-animated">
 									<img src="images/javascript2.jpg" class="wp-post-image" alt="" />
 									<span class="info circle">
